--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -271,17 +271,22 @@
                     <option value="Sébastien Ogier">Sébastien Ogier</option>
                     <option value="Elfyn Evans">Elfyn Evans</option>
                     <option value="Takamoto Katsuta">Takamoto Katsuta</option>
+                    <option value="Carlos Moreno">Carlos Moreno</option>
                 </optgroup>
 
                 <optgroup label="Hyundai Shell Mobis">
                     <option value="Thierry Neuville">Thierry Neuville</option>
                     <option value="Ott Tänak">Ott Tänak</option>
                     <option value="Dani Sordo">Dani Sordo</option>
+                    <option value="Antonio Ariete">Antonio Ariete</option>
+                    <option value="Álvaro San Martín">Álvaro San Martín</option>
                 </optgroup>
 
                 <optgroup label="M-Sport Ford WRT">
                     <option value="Adrien Fourmaux">Adrien Fourmaux</option>
                     <option value="Grégoire Munster">Grégoire Munster</option>
+                    <option value="Cohete Suárez">Cohete Suárez</option>
+                    <option value="Javier Polidura">Javier Polidura</option>
                 </optgroup>
             </select>
 
@@ -372,7 +377,12 @@
                 "ott tänak": "https://img.icons8.com/color/48/estonia.png",
                 "dani sordo": "https://img.icons8.com/color/48/spain-2.png",
                 "adrien fourmaux": "https://img.icons8.com/color/48/france.png",
-                "grégoire munster": "https://img.icons8.com/color/48/luxembourg.png"
+                "grégoire munster": "https://img.icons8.com/color/48/luxembourg.png",
+                "cohete suárez": "https://img.icons8.com/color/48/spain-2.png",
+                "carlos moreno": "https://img.icons8.com/color/48/spain-2.png",
+                "antonio ariete": "https://img.icons8.com/color/48/spain-2.png",
+                "javier polidura": "https://img.icons8.com/color/48/luxembourg.png",
+                "álvaro san martín": "https://img.icons8.com/color/48/japan.png"
             };
             const url = urlsBanderas[nombre.toLowerCase()];
             return url ? `<img src="${url}" alt="flag" width="22" height="22" style="border-radius:3px;">` : "";
@@ -452,6 +462,8 @@
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ piloto: p, coche: c, tiempoSegundos: t, tramo: tramo })
                 });
+   
+                const respuesta = await res.json();
 
                 if (res.ok) {
                     Swal.fire({
@@ -463,8 +475,19 @@
                     if (document.getElementById("tramoView").value === tramo) {
                         cargarTabla();
                     }
+                } else {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Error de registro',
+                        text: respuesta.mensaje || 'No se pudo guardar.', 
+                        background: '#1e1e1e', color: '#fff'
+                    });
                 }
-            } catch (error) { Swal.fire({ icon: 'error', title: 'Error servidor' }); }
+
+            } catch (error) {
+                console.error(error);
+                Swal.fire({ icon: 'error', title: 'Error de conexión', text: 'El servidor no responde.', background: '#1e1e1e', color: '#fff' });
+            }
         }
 
         async function eliminar(nombrePiloto, tramoContexto) {
